--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
     "reselect": "^4.0.0",
+    "tau-prolog": "^0.2.80",
     "typescript": "~3.7.2"
   },
   "scripts": {
